--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,78 +1,80 @@
 {% extends 'baseAdmin.html.twig' %}
 
 {% block body %}
-    <div class="row gutter-xs">
-        <div class="col-md-6 col-lg-3 col-lg-push-0">
-            <div class="card bg-primary">
-                <div class="card-body">
-                    <div class="media">
-                        <div class="media-middle media-left">
+    <div class="col-md-12">
+        <div class="row gutter-xs">
+            <div class="col-md-6 col-lg-3 col-lg-push-0">
+                <div class="card bg-primary">
+                    <div class="card-body">
+                        <div class="media">
+                            <div class="media-middle media-left">
                       <span class="bg-primary-inverse circle sq-48">
                         <span class="icon icon-user"></span>
                       </span>
-                        </div>
-                        <div class="media-middle media-body">
-                            <h6 class="media-heading">Nouveaux utilisateurs</h6>
-                            <h3 class="media-heading">
-                                <span class="fw-l">1,760</span>
-                            </h3>
+                            </div>
+                            <div class="media-middle media-body">
+                                <h6 class="media-heading">Nombre d'utilisateurs</h6>
+                                <h3 class="media-heading">
+                                    <span class="fw-l">2,760</span>
+                                </h3>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6 col-lg-3 col-lg-push-3">
-            <div class="card bg-info">
-                <div class="card-body">
-                    <div class="media">
-                        <div class="media-middle media-left">
+            <div class="col-md-6 col-lg-3 col-lg-push-3">
+                <div class="card bg-info">
+                    <div class="card-body">
+                        <div class="media">
+                            <div class="media-middle media-left">
                       <span class="bg-info-inverse circle sq-48">
                         <span class="icon icon-shopping-bag"></span>
                       </span>
-                        </div>
-                        <div class="media-middle media-body">
-                            <h6 class="media-heading">Bets enregistrés</h6>
-                            <h3 class="media-heading">
-                                <span class="fw-l">1,256 </span>
-                            </h3>
+                            </div>
+                            <div class="media-middle media-body">
+                                <h6 class="media-heading">Total dépensé</h6>
+                                <h3 class="media-heading">
+                                    <span class="fw-l">1 256 €</span>
+                                </h3>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6 col-lg-3 col-lg-pull-3">
-            <div class="card bg-info">
-                <div class="card-body">
-                    <div class="media">
-                        <div class="media-middle media-left">
+            <div class="col-md-6 col-lg-3 col-lg-pull-3">
+                <div class="card bg-info">
+                    <div class="card-body">
+                        <div class="media">
+                            <div class="media-middle media-left">
                       <span class="bg-info-inverse circle sq-48">
-                        <span class="icon icon-eur"></span>
+                        <span class="icon icon-clock-o"></span>
                       </span>
-                        </div>
-                        <div class="media-middle media-body">
-                            <h6 class="media-heading">Montant total dépensé</h6>
-                            <h3 class="media-heading">
-                                <span class="fw-l">1,654,865 </span>
-                            </h3>
+                            </div>
+                            <div class="media-middle media-body">
+                                <h6 class="media-heading">Paris enregistrés aujourd'hui</h6>
+                                <h3 class="media-heading">
+                                    <span class="fw-l">256</span>
+                                </h3>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6 col-lg-3 col-lg-pull-0">
-            <div class="card bg-warning">
-                <div class="card-body">
-                    <div class="media">
-                        <div class="media-middle media-left">
+            <div class="col-md-6 col-lg-3 col-lg-pull-0">
+                <div class="card bg-warning">
+                    <div class="card-body">
+                        <div class="media">
+                            <div class="media-middle media-left">
                       <span class="bg-warning-inverse circle sq-48">
-                        <span class="icon icon-eur"></span>
+                        <span class="icon icon-usd"></span>
                       </span>
-                        </div>
-                        <div class="media-middle media-body">
-                            <h6 class="media-heading">Montant total gagné</h6>
-                            <h3 class="media-heading">
-                                <span class="fw-l">6,845,987 </span>
-                            </h3>
+                            </div>
+                            <div class="media-middle media-body">
+                                <h6 class="media-heading">Total gagné</h6>
+                                <h3 class="media-heading">
+                                    <span class="fw-l">65 652€</span>
+                                </h3>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -87,30 +89,49 @@
                 <span>Ligue 1</span>
             </div>
             <div class="card-body">
-            {% for game in games %}
                 <table class="table text-center">
                     <thead >
                     <tr>
+                        <th class="text-center">Date</th>
                         <th></th>
                         <th class="text-center">1</th>
-                        <th class="text-center">2</th>
                         <th class="text-center">Nul</th>
+                        <th class="text-center">2</th>
                     </tr>
                     </thead>
+            {% for game in games %}
+
                     <tr>
-                        <td>{{ game.homeTeam }} - {{ game.awayTeam }}</td>
+                        <td>{{ game.dateMatch|date("d-m-y à G:i", "Europe/Paris") }}</td>
+                        <td class="text-left">
+
+                            <span class="icon icon-soccer-ball-o"></span>   {{ game.homeTeam }} - {{ game.awayTeam}}
+                        </td>
                         {% for odd in game.odds %}
                         <td class="text-center">
-                            <a class="btn btn-sm btn-labeled arrow-top arrow-success" href="#">
-                                {{ odd.odd }}
-                            </a>
+                            {%  if app.user != null %}
+                                <button class="btn btn-outline-primary odd" data-id="{{ odd.id }}" data-toggle="modal" data-target="#infoModalColoredHeader" type="button" style="min-width:100%;">{{ odd.odd }}</button>
+                            {% else %}
+                                <button class="btn btn-outline-primary" type="button">{{ odd.odd }}</button>
+                            {% endif %}
                         </td>
                         {% endfor %}
                     </tr>
-                </table>
+
             {% endfor %}
+                </table>
             </div>
         </div>
     </div>
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+        <div class="row">
+
+        </div>
+    </div>
+
+
+
+
 {% endblock %}
 
