--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,134 +1,159 @@
 {% extends 'baseAdmin.html.twig' %}
 
 {% block body %}
-    <div class="col-md-12">
-        <div class="row gutter-xs">
-            <div class="col-md-6 col-lg-3 col-lg-push-0">
-                <div class="card bg-primary">
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-middle media-left">
-                      <span class="bg-primary-inverse circle sq-48">
-                        <span class="icon icon-user"></span>
-                      </span>
+    <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <a class="dashboard-stat dashboard-stat-v2 blue" href="#">
+                <div class="visual">
+                    <i class="fa fa-comments"></i>
+                </div>
+                <div class="details">
+                    <div class="number">
+                        <span data-counter="counterup" data-value="1349">1349</span>
+                    </div>
+                    <div class="desc"> New Feedbacks </div>
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <a class="dashboard-stat dashboard-stat-v2 red" href="#">
+                <div class="visual">
+                    <i class="fa fa-bar-chart-o"></i>
+                </div>
+                <div class="details">
+                    <div class="number">
+                        <span data-counter="counterup" data-value="12,5">12,5</span>M$ </div>
+                    <div class="desc"> Total Profit </div>
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <a class="dashboard-stat dashboard-stat-v2 green" href="#">
+                <div class="visual">
+                    <i class="fa fa-shopping-cart"></i>
+                </div>
+                <div class="details">
+                    <div class="number">
+                        <span data-counter="counterup" data-value="549">549</span>
+                    </div>
+                    <div class="desc"> New Orders </div>
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <a class="dashboard-stat dashboard-stat-v2 purple" href="#">
+                <div class="visual">
+                    <i class="fa fa-globe"></i>
+                </div>
+                <div class="details">
+                    <div class="number"> +
+                        <span data-counter="counterup" data-value="89">89</span>% </div>
+                    <div class="desc"> Brand Popularity </div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+
+                <div class="portlet box red">
+                    <div class="portlet-title">
+                        <div class="caption">
+                            <i class="fa fa-futbol-o"></i> Prochains matchs </div>
+                        <ul class="nav nav-tabs">
+                            <li class="">
+                                <a href="#portlet_tab_3" data-toggle="tab" aria-expanded="false"> Liga </a>
+                            </li>
+                            <li class="">
+                                <a href="#portlet_tab_2" data-toggle="tab" aria-expanded="false">Premier League </a>
+                            </li>
+                            <li class="active">
+                                <a href="#portlet_tab_1" data-toggle="tab" aria-expanded="true"> Ligue 1 </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="portlet-body">
+                        <div class="tab-content">
+                            <div class="tab-pane active" id="portlet_tab_1">
+                                <table class="table text-center">
+                                    <thead >
+                                    <tr>
+                                        <th class="text-center">Date</th>
+                                        <th></th>
+                                        <th class="text-center">1</th>
+                                        <th class="text-center">Nul</th>
+                                        <th class="text-center">2</th>
+                                    </tr>
+                                    </thead>
+                                    {% for game in games %}
+
+                                        <tr>
+                                            <td>{{ game.dateMatch|date("d-m-y à G:i", "Europe/Paris") }}</td>
+                                            <td class="text-left">
+
+                                                <i class="fa fa-futbol-o"></i> <strong> {{ game.homeTeam }} - {{ game.awayTeam}}</strong>
+                                            </td>
+                                            {% for odd in game.odds %}
+                                                <td class="text-center">
+                                                    {%  if app.user != null %}
+                                                        <button class="btn red-mint btn-outline sbold uppercase odd" data-id="{{ odd.id }}" data-toggle="modal" data-target="#infoModalColoredHeader" type="button" style="min-width:100%;">{{ odd.odd }}</button>
+                                                    {% else %}
+                                                        <button class="btn red-mint btn-outline sbold uppercase" type="button" style="min-width:100%;">{{ odd.odd }}</button>
+                                                    {% endif %}
+                                                </td>
+                                            {% endfor %}
+                                        </tr>
+
+                                    {% endfor %}
+                                </table>
                             </div>
-                            <div class="media-middle media-body">
-                                <h6 class="media-heading">Nombre d'utilisateurs</h6>
-                                <h3 class="media-heading">
-                                    <span class="fw-l">2,760</span>
-                                </h3>
+                            <div class="tab-pane" id="portlet_tab_2">
+                                <p> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
+                                    duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo. </p>
+                            </div>
+                            <div class="tab-pane" id="portlet_tab_3">
+                                <p> Ut wisi enim ad btn-smm veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate
+                                    velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore
+                                    te feugait nulla facilisi. </p>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6 col-lg-3 col-lg-push-3">
-                <div class="card bg-info">
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-middle media-left">
-                      <span class="bg-info-inverse circle sq-48">
-                        <span class="icon icon-shopping-bag"></span>
-                      </span>
+
+        </div>
+        <div class="col-md-4">
+            <div class="row">
+                {% if app.user != null%}
+                    <div class="">
+                        <a class="dashboard-stat dashboard-stat-v2 red" href="#">
+                            <div class="visual">
+                                <i class="fa fa-bar-chart-o"></i>
                             </div>
-                            <div class="media-middle media-body">
-                                <h6 class="media-heading">Total dépensé</h6>
-                                <h3 class="media-heading">
-                                    <span class="fw-l">1 256 €</span>
-                                </h3>
+                            <div class="details">
+                                <div class="number">
+                                    <span >{{ app.user.credit }}</span> € </div>
+                                <div class="desc"> Votre crédit </div>
                             </div>
+                        </a>
+                    </div>
+
+                    <div class="portlet box red">
+                        <div class="portlet-title">
+                            <div class="caption">
+                                <i class="fa fa-gift"></i>Vos 5 derniers paris</div>
+                        </div>
+                        <div class="portlet-body">
+
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3 col-lg-pull-3">
-                <div class="card bg-info">
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-middle media-left">
-                      <span class="bg-info-inverse circle sq-48">
-                        <span class="icon icon-clock-o"></span>
-                      </span>
-                            </div>
-                            <div class="media-middle media-body">
-                                <h6 class="media-heading">Paris enregistrés aujourd'hui</h6>
-                                <h3 class="media-heading">
-                                    <span class="fw-l">256</span>
-                                </h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3 col-lg-pull-0">
-                <div class="card bg-warning">
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-middle media-left">
-                      <span class="bg-warning-inverse circle sq-48">
-                        <span class="icon icon-usd"></span>
-                      </span>
-                            </div>
-                            <div class="media-middle media-body">
-                                <h6 class="media-heading">Total gagné</h6>
-                                <h3 class="media-heading">
-                                    <span class="fw-l">65 652€</span>
-                                </h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% endif %}
+
+
             </div>
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="card">
-            <div class="card-header bg-primary">
-                <strong>Prochains matchs</strong>
-                <span aria-hidden="true"> · </span>
-                <span>Ligue 1</span>
-            </div>
-            <div class="card-body">
-                <table class="table text-center">
-                    <thead >
-                    <tr>
-                        <th class="text-center">Date</th>
-                        <th></th>
-                        <th class="text-center">1</th>
-                        <th class="text-center">Nul</th>
-                        <th class="text-center">2</th>
-                    </tr>
-                    </thead>
-            {% for game in games %}
 
-                    <tr>
-                        <td>{{ game.dateMatch|date("d-m-y à G:i", "Europe/Paris") }}</td>
-                        <td class="text-left">
-
-                            <span class="icon icon-soccer-ball-o"></span>   {{ game.homeTeam }} - {{ game.awayTeam}}
-                        </td>
-                        {% for odd in game.odds %}
-                        <td class="text-center">
-                            {%  if app.user != null %}
-                                <button class="btn btn-outline-primary odd" data-id="{{ odd.id }}" data-toggle="modal" data-target="#infoModalColoredHeader" type="button" style="min-width:100%;">{{ odd.odd }}</button>
-                            {% else %}
-                                <button class="btn btn-outline-primary" type="button">{{ odd.odd }}</button>
-                            {% endif %}
-                        </td>
-                        {% endfor %}
-                    </tr>
-
-            {% endfor %}
-                </table>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-        <div class="row">
-
-        </div>
-    </div>
 
 
 
