--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,56 +2,45 @@
 
 {% block body %}
     <div class="row">
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <a class="dashboard-stat dashboard-stat-v2 blue" href="#">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+            <a class="dashboard-stat dashboard-stat-v2 red" href="#">
                 <div class="visual">
                     <i class="fa fa-comments"></i>
                 </div>
                 <div class="details">
                     <div class="number">
-                        <span data-counter="counterup" data-value="1349">1349</span>
+                        <span data-counter="counterup" data-value="1349">{{ nbUser }}</span>
                     </div>
-                    <div class="desc"> New Feedbacks </div>
+                    <div class="desc"> Nouveaux utilisateurs </div>
                 </div>
             </a>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
             <a class="dashboard-stat dashboard-stat-v2 red" href="#">
                 <div class="visual">
                     <i class="fa fa-bar-chart-o"></i>
                 </div>
                 <div class="details">
                     <div class="number">
-                        <span data-counter="counterup" data-value="12,5">12,5</span>M$ </div>
-                    <div class="desc"> Total Profit </div>
+                        <span data-counter="counterup" data-value="12,5">{{ AmountBet|number_format(2, '.', ' ') }}</span> € </div>
+                    <div class="desc"> Montant dépensé </div>
                 </div>
             </a>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <a class="dashboard-stat dashboard-stat-v2 green" href="#">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+            <a class="dashboard-stat dashboard-stat-v2 red" href="#">
                 <div class="visual">
                     <i class="fa fa-shopping-cart"></i>
                 </div>
                 <div class="details">
                     <div class="number">
-                        <span data-counter="counterup" data-value="549">549</span>
+                        <span data-counter="counterup" data-value="549">{{ nbBet }}</span>
                     </div>
-                    <div class="desc"> New Orders </div>
+                    <div class="desc"> Nombre de paris </div>
                 </div>
             </a>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <a class="dashboard-stat dashboard-stat-v2 purple" href="#">
-                <div class="visual">
-                    <i class="fa fa-globe"></i>
-                </div>
-                <div class="details">
-                    <div class="number"> +
-                        <span data-counter="counterup" data-value="89">89</span>% </div>
-                    <div class="desc"> Brand Popularity </div>
-                </div>
-            </a>
-        </div>
+
     </div>
     <div class="row">
         <div class="col-md-8">
@@ -85,10 +74,10 @@
                                         <th class="text-center">2</th>
                                     </tr>
                                     </thead>
-                                    {% for game in games %}
+                                    {% for game in gamesLigue1 %}
 
                                         <tr>
-                                            <td>{{ game.dateMatch|date("d-m-y à G:i", "Europe/Paris") }}</td>
+                                            <td>{{ game.dateMatch|date("d-m-y à G:i ", "Europe/Paris") }}heures</td>
                                             <td class="text-left">
 
                                                 <i class="fa fa-futbol-o"></i> <strong> {{ game.homeTeam }} - {{ game.awayTeam}}</strong>
@@ -108,14 +97,70 @@
                                 </table>
                             </div>
                             <div class="tab-pane" id="portlet_tab_2">
-                                <p> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
-                                    duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                                    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo. </p>
-                            </div>
+                                <table class="table text-center">
+                                    <thead >
+                                    <tr>
+                                        <th class="text-center">Date</th>
+                                        <th></th>
+                                        <th class="text-center">1</th>
+                                        <th class="text-center">Nul</th>
+                                        <th class="text-center">2</th>
+                                    </tr>
+                                    </thead>
+                                    {% for game in gamesAnglais %}
+
+                                        <tr>
+                                            <td>{{ game.dateMatch|date("d-m-y à G:i ", "Europe/Paris") }}heures</td>
+                                            <td class="text-left">
+
+                                                <i class="fa fa-futbol-o"></i> <strong> {{ game.homeTeam }} - {{ game.awayTeam}}</strong>
+                                            </td>
+                                            {% for odd in game.odds %}
+                                                <td class="text-center">
+                                                    {%  if app.user != null %}
+                                                        <button class="btn red-mint btn-outline sbold uppercase odd" data-id="{{ odd.id }}" data-toggle="modal" data-target="#infoModalColoredHeader" type="button" style="min-width:100%;">{{ odd.odd }}</button>
+                                                    {% else %}
+                                                        <button class="btn red-mint btn-outline sbold uppercase" type="button" style="min-width:100%;">{{ odd.odd }}</button>
+                                                    {% endif %}
+                                                </td>
+                                            {% endfor %}
+                                        </tr>
+
+                                    {% endfor %}
+                                </table>
+                                </div>
                             <div class="tab-pane" id="portlet_tab_3">
-                                <p> Ut wisi enim ad btn-smm veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate
-                                    velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore
-                                    te feugait nulla facilisi. </p>
+                                <table class="table text-center">
+                                    <thead >
+                                    <tr>
+                                        <th class="text-center">Date</th>
+                                        <th></th>
+                                        <th class="text-center">1</th>
+                                        <th class="text-center">Nul</th>
+                                        <th class="text-center">2</th>
+                                    </tr>
+                                    </thead>
+                                    {% for game in gamesLiga %}
+
+                                        <tr>
+                                            <td>{{ game.dateMatch|date("d-m-y à G:i ", "Europe/Paris") }}heures</td>
+                                            <td class="text-left">
+
+                                                <i class="fa fa-futbol-o"></i> <strong> {{ game.homeTeam }} - {{ game.awayTeam}}</strong>
+                                            </td>
+                                            {% for odd in game.odds %}
+                                                <td class="text-center">
+                                                    {%  if app.user != null %}
+                                                        <button class="btn red-mint btn-outline sbold uppercase odd" data-id="{{ odd.id }}" data-toggle="modal" data-target="#infoModalColoredHeader" type="button" style="min-width:100%;">{{ odd.odd }}</button>
+                                                    {% else %}
+                                                        <button class="btn red-mint btn-outline sbold uppercase" type="button" style="min-width:100%;">{{ odd.odd }}</button>
+                                                    {% endif %}
+                                                </td>
+                                            {% endfor %}
+                                        </tr>
+
+                                    {% endfor %}
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -125,29 +170,44 @@
         <div class="col-md-4">
             <div class="row">
                 {% if app.user != null%}
-                    <div class="">
+                    <div id="userCredit">
                         <a class="dashboard-stat dashboard-stat-v2 red" href="#">
                             <div class="visual">
                                 <i class="fa fa-bar-chart-o"></i>
                             </div>
                             <div class="details">
                                 <div class="number">
-                                    <span >{{ app.user.credit }}</span> € </div>
+                                    <span >{{ app.user.credit|number_format(2,'.',' ') }}</span> € </div>
                                 <div class="desc"> Votre crédit </div>
                             </div>
                         </a>
                     </div>
-
+                {% endif %}
                     <div class="portlet box red">
                         <div class="portlet-title">
                             <div class="caption">
-                                <i class="fa fa-gift"></i>Vos 5 derniers paris</div>
+                                <i class="fa fa-users"></i>Classement des 10 meilleurs parieurs</div>
                         </div>
                         <div class="portlet-body">
-
+                            <table class="table text-center">
+                                <thead >
+                                <tr>
+                                    <th class="text-center">Pseudo</th>
+                                    <th class="text-center">Crédit</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for user in users %}
+                                <tr>
+                                    <td>{{ user.username }}</td>
+                                    <td>{{ user.credit|number_format(2, '.', ' ') }} €</td>
+                                </tr>
+                                {% endfor %}
+                                </tbody>
+                                </table>
                         </div>
                     </div>
-                {% endif %}
+
 
 
             </div>
