--- a/app/Resources/views/ticket/new.html.twig
+++ b/app/Resources/views/ticket/new.html.twig
@@ -1,11 +1,23 @@
 {% extends 'baseAdmin.html.twig' %}
 
 {% block body %}
-    <h1>Création d'un ticket</h1>
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-    {{ form_end(form) }}
+    <div class="col-md-4 col-md-offset-4">
+        <div class="portlet light bg-inverse">
+            <div class="portlet-title">
+                <div class="caption">
+                    <i class="icon-paper-plane font-green-haze"></i>
+                    <span class="caption-subject bold font-green-haze uppercase"> Envoyer un message au support </span>
+                </div>
+            </div>
+            <div class="portlet-body">
+                {{ form_start(form) }}
+                {{ form_widget(form) }}
+                <button type="submit" class="btn green">Envoyer</button>
+                {{ form_end(form) }}
+                </div>
+        </div>
+    </div>
+
 
 {% endblock %}
