--- a/app/Resources/views/baseAdmin.html.twig
+++ b/app/Resources/views/baseAdmin.html.twig
@@ -83,7 +83,7 @@
                                 <li class="divider"> </li>
                                 <li>
                                     <a href="{{ path('fos_user_security_logout') }}">
-                                        <i class="icon-key"></i> Log Out </a>
+                                        <i class="icon-key"></i> Déconnexion </a>
                                 </li>
                             </ul>
                         </li>
